trunk/NewArchive/ad01ac1f793231c9ae9a3869d9581645-a63ad9fea3739cb794a74965e5d28fb3/output
+ g++ -std=c++1y -O2 -Wall -pthread main.cpp
main.cpp: In instantiation of ‘struct bar<foo_sub>’:
main.cpp:29:16:   required from here
main.cpp:18:3: error: static assertion failed: 
   static_assert(is_instantiation_of_foo<FooType>::value, "");
   ^
main.cpp: In function ‘int main(int, char**)’:
main.cpp:29:16: warning: unused variable ‘b’ [-Wunused-variable]
   bar<foo_sub> b;
                ^
